--- a/titan-dist/titan-dist-hadoop-1/pom.xml
+++ b/titan-dist/titan-dist-hadoop-1/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.thinkaurelius.titan</groupId>
+        <groupId>solutions.amtech</groupId>
         <artifactId>titan-dist</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <packaging>pom</packaging>
     <artifactId>titan-dist-hadoop-1</artifactId>
     <name>Titan-Dist: Archive with Hadoop 1</name>
-    <url>http://thinkaurelius.github.com/titan/</url>
+    <url>https://github.com/amtechmx/titan</url>
 
     <properties>
         <hadoop.version.tag>hadoop1</hadoop.version.tag>
