--- a/titan-dist/titan-dist-hadoop-2/pom.xml
+++ b/titan-dist/titan-dist-hadoop-2/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.thinkaurelius.titan</groupId>
+        <groupId>solutions.amtech</groupId>
         <artifactId>titan-dist</artifactId>
         <version>0.9.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <artifactId>titan-dist-hadoop-2</artifactId>
     <name>Titan-Dist: Archive with Hadoop 2</name>
-    <url>http://thinkaurelius.github.com/titan/</url>
+    <url>https://github.com/amtechmx/titan</url>
 
     <properties>
         <hadoop.version.tag>hadoop2</hadoop.version.tag>
