--- a/titan-rexster/pom.xml
+++ b/titan-rexster/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.thinkaurelius.titan</groupId>
+        <groupId>solutions.amtech</groupId>
         <artifactId>titan</artifactId>
         <version>0.9.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>titan-rexster</artifactId>
     <name>Titan-Rexster: Support for Titan in Rexster</name>
-    <url>http://thinkaurelius.github.com/titan/</url>
+    <url>https://github.com/amtechmx/titan</url>
 
     <properties>
         <top.level.basedir>${basedir}/..</top.level.basedir>
@@ -16,7 +16,7 @@
     
     <dependencies>
         <dependency>
-            <groupId>com.thinkaurelius.titan</groupId>
+            <groupId>solutions.amtech</groupId>
             <artifactId>titan-core</artifactId>
             <version>${project.version}</version>
         </dependency>
